Changed employee to employer

--- a/pages/perkinelmer.html
+++ b/pages/perkinelmer.html
@@ -42,7 +42,7 @@
 	  </p>
 	  <br>
 	  <br>
-	  <h2 class="work-term-report-head"> Employee Information </h2>
+	  <h2 class="work-term-report-head"> Employer Information </h2>
 	  <p style="font-size: 20px;"> 
 	  PerkinElmer is a global leader committed to innovating for a healthier world. Our dedicated team of about 11,000 employees worldwide are passionate about providing customers with an 
 	  unmatched experience as they help solve critical issues especially impacting the diagnostics, discovery and analytical solutions markets. Our innovative detection, imaging, informatics 
