Made the Gedcom picture link to github

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
+            <a class="portfolio-item" href="https://github.com/mvamvakas/Geneology-App">
               <span class="caption">
                 <span class="caption-content">
                   <h2 class="text-black-outline">Geneology Site</h2>
