Added in job description as well as edited website titles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Michael Vamvakas - Coop Site</title>
+    <title>Michael Vamvakas</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -163,7 +163,7 @@
               <span class="caption">
                 <span class="caption-content">
                   <h2 class="text-black-outline">Geneology Site</h2>
-                  <p class="text-black-outline mb-0">Geneology tracker site, This site uses a HTML/CSS front end and a C back end.<br>
+                  <p class="text-black-outline mb-0">Geneology tracker site, This site uses a HTML/CSS front end, a C back end, and node.js to connect them together.<br>
 				  This site parses gedcom files and displays the data from inside them for the user to see.
 				  </p>
                 </span>
