--- a/pages/perkinelmer.html
+++ b/pages/perkinelmer.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Michael Vamvakas - Coop Site</title>
+    <title>PerkinElmer - Michael</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -44,9 +44,31 @@
 	  <br>
 	  <h2 class="work-term-report-head"> Employer Information </h2>
 	  <p style="font-size: 20px;"> 
-	  PerkinElmer is a global leader committed to innovating for a healthier world. Our dedicated team of about 11,000 employees worldwide are passionate about providing customers with an 
-	  unmatched experience as they help solve critical issues especially impacting the diagnostics, discovery and analytical solutions markets. Our innovative detection, imaging, informatics 
-	  and service capabilities, combined with deep market knowledge and expertise, help customers gain earlier and more accurate insights to improve lives and the world around us.
+	  <a href="https://www.perkinelmer.com/">PerkinElmer</a> is an American company founded in 1939. They focus in the areas of human and environmental health. This includes environmental analysis, food and consumer product safety, 
+	  and life science research to name a few. The software, medical imaging components, instruments, and consumables help many end markets. Some of these markets are Animal Health, 
+	  Food & Agriculture, and Therapeutic Areas. Their offices are located all over the world, including the United States, Canada, France, South Africa, Japan, 
+	  Australia, China, and Brazil. The Guelph R&D Team is currently working on informatics software for the medical industry.
+	  </p>
+	  <br>
+	  <br>
+	  <h2 class="work-term-report-head"> Job Description </h2>
+	  <p style="font-size: 20px;"> 
+	  While working at PerkinElmer as an Associate QA Engineer, my main job was to assist in testing <a href="https://www.perkinelmer.com/product/signals-medical-review-smr">Signals Medical Review</a>. My role
+	  within the team was to test all the bugfixes/changes, both manually and through automation. Working as a tester helped me understand how much testing is required when building software and how important
+	  it is to make sure that every time code is added that the added code doesn't disrupt functionality within the system.
+	  <br>
+	  <br>
+	  Many of the things I did at PerkinElmer Include:
+	  <br>
+	  - Writing an automated test harness in Java using the <a href="https://www.seleniumhq.org/">Selenium framework</a>, as well as <a href="https://cucumber.io/">Cucumber</a>, <a href="https://maven.apache.org/">Maven</a>, and <a href="https://www.perkinelmer.com/product/signals-medical-review-smr">JUnit</a>.
+	  <br>
+	  - Running automated test cases in parallel.
+	  <br>
+	  - Using Jira, creating test cases, pushing issues from "in test" to "done" after running them through all the related test cycles.
+	  <br>
+	  - Sas Programming to update existing data sets to use for soak testing.
+	  <br>
+	  - Stability testing, testing all the parameters for specific functionalities within the system, testing concurency within the system.
 	  </p>
 	</div>
 
