--- a/pages/perkinelmer.html
+++ b/pages/perkinelmer.html
@@ -70,6 +70,29 @@
 	  <br>
 	  - Stability testing, testing all the parameters for specific functionalities within the system, testing concurency within the system.
 	  </p>
+	  <br>
+	  <br>
+	  <h2 class="work-term-report-head"> Goals </h2>
+	  <p style="font-size: 20px">
+	  My main goals while working for PerkinElmer was to increase my abilities as a programmer, as well as grow within a proffesional environment. I wanted to work on my communication skills as well as be more
+	  comfortable talking in front of my team.
+	  <br>
+	  <br>
+	  My goals were:
+	  <br>
+	  1. Be more confortable with agile development
+	  <br>
+	  2. Learn the selenium framework and improve my java skills
+	  <br>
+	  3. Be less afraid to ask for help if I don't understand something
+	  </p>
+	  <br>
+	   <p style="font-size: 20px">
+	  Having standup meetings every morning helped me immensly with getting more comfortable with agile. It also helped with my communication as I needed to be able to articulate what I had been working on. Once 
+	  a month my supervisor and I would meet to reflect on my goals and to see what other steps could be taken to reaching them, which was very helpful for my learning.
+	  <br>
+	  (Add a section for reflection at the end of work term)
+	  </p>
 	</div>
 
     <!-- Footer -->
