added more links

--- a/pages/perkinelmer.html
+++ b/pages/perkinelmer.html
@@ -64,11 +64,12 @@
 	  <br>
 	  - Running automated test cases in parallel.
 	  <br>
-	  - Using Jira, creating test cases, pushing issues from "in test" to "done" after running them through all the related test cycles.
+	  - Using <a href="https://www.atlassian.com/software/jira?aceid=&adposition=1t1&adgroup=59152536674&campaign=1440801501&creative=276117264463&device=c&keyword=jira&matchtype=e&network=g&placement=&ds_kids=p34163685171&ds_e=GOOGLE&ds_eid=700000001558501&ds_e1=GOOGLE&gclid=EAIaIQobChMI9b7wwP2S3QIVTVmGCh3BngjUEAAYASAAEgJ1wfD_BwE&gclsrc=aw.ds">Jira</a>, 
+	  creating test cases, pushing issues from "in test" to "done" after running them through all the related test cycles.
 	  <br>
-	  - Sas Programming to update existing data sets to use for soak testing.
+	  - <a href="https://support.sas.com/en/support-home.html">Sas Programming</a> to update existing data sets to use for <a href="http://www.testingperformance.org/definitions/what-is-soak-testing">soak testing</a>.
 	  <br>
-	  - Stability testing, testing all the parameters for specific functionalities within the system, testing concurency within the system.
+	  - <a href="https://en.wikipedia.org/wiki/Stability_testing">Stability testing</a>, testing all the parameters for specific functionalities within the system, testing concurency within the system.
 	  </p>
 	  <br>
 	  <br>
