Added a nav bar to the perkin elmer page and updated links

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#contact">Contact</a>
+          <a class="js-scroll-trigger" href="#coop">Co-op</a>
         </li>
       </ul>
     </nav>
@@ -198,7 +198,7 @@
     </section>
 
     <!-- COOP -->
-    <section class="content-section bg-primary text-white coop-picture text-black-outline">
+    <section class="content-section bg-primary text-white coop-picture text-black-outline" id="coop">
       <div class="container text-center">
         <h2 class="mb-4">Co-op Experiences</h2>
       </div>
@@ -217,7 +217,8 @@
       <div class="container">
         <ul class="list-inline mb-5">
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white mr-3" href="#">
+            <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/michaelvamvakas
+">
               <i class="icon-social-linkedin"></i>
             </a>
           </li>
@@ -227,7 +228,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white" href="#">
+            <a class="social-link rounded-circle text-white" href="https://github.com/mvamvakas">
               <i class="icon-social-github"></i>
             </a>
           </li>
