--- a/pages/perkinelmer.html
+++ b/pages/perkinelmer.html
@@ -26,7 +26,37 @@
   <body id="page-top">
 
     <div class="perkin-elmer-header">
-	  <h1 class="mb-1" style="font-size: 30px;"> Michael Vamvakas</h1>
+	<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #C7FEFF;">
+	  <h class="navbar-brand" href="#"><b>Michael Vamvakas</b></h>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+		<ul class="navbar-nav">
+		  <li class="nav-item active">
+		    <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+		  </li>
+		  <li class="nav-item active">
+			<a class="nav-link" href="#">Coop-2</a>
+		  </li>
+		  <li class="nav-item active">
+			<a class="nav-link" href="#">Coop-3</a>
+		  </li>
+		  <!--
+	  	  <li class="nav-item active">
+			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			  Dropdown link
+			</a>
+		    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+			  <a class="dropdown-item" href="#">Action</a>
+			  <a class="dropdown-item" href="#">Another action</a>
+			  <a class="dropdown-item" href="#">Something else here</a>
+			</div>
+		  </li>
+		  -->
+		</ul>
+	  </div>
+	</nav>
 	  <div style="width: 700px; margin: 0 auto;">
 	    <h1 class="perkin-elmer-title"> <b style="color:black;">Perkin</b><b>Elmer</b> </h1>
 		<h1 class="perkin-elmer-description"> Co-op terms S18 and F18 </h1>
