added some stuff to my work term report

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </h4>
             <p class="text-faded mb-0">(Need to fill)</p>
           </div>
-        </div>
+        </div> 
 		<br><br>
 		<a class="btn btn-dark btn-xl js-scroll-trigger" href="#portfolio">Projects</a>
       </div>
@@ -172,7 +172,7 @@
             </a>
           </div>
 		  <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
+		    <a class="portfolio-item" href="https://github.com/mvamvakas/Smash-Site">
               <span class="caption">
                 <span class="caption-content">
                   <h2>Smash Tourney Site</h2>
