--- a/pages/perkinelmer.html
+++ b/pages/perkinelmer.html
@@ -100,6 +100,8 @@
 	  - <a href="https://support.sas.com/en/support-home.html">Sas Programming</a> to update existing data sets to use for <a href="http://www.testingperformance.org/definitions/what-is-soak-testing">soak testing</a>.
 	  <br>
 	  - <a href="https://en.wikipedia.org/wiki/Stability_testing">Stability testing</a>, testing all the parameters for specific functionalities within the system, testing concurency within the system.
+	  <br>
+	  - <a href="https://en.wikipedia.org/wiki/Regression_testing">Regression testing</a>, running through hundreds of test cases after deployments in both DEV and QA environments.
 	  </p>
 	  <br>
 	  <br>
@@ -109,7 +111,7 @@
 	  comfortable talking in front of my team.
 	  <br>
 	  <br>
-	  My goals were:
+	  My goals for the first 4 months were:
 	  <br>
 	  1. Be more confortable with agile development
 	  <br>
@@ -122,7 +124,24 @@
 	  Having standup meetings every morning helped me immensly with getting more comfortable with agile. It also helped with my communication as I needed to be able to articulate what I had been working on. Once 
 	  a month my supervisor and I would meet to reflect on my goals and to see what other steps could be taken to reaching them, which was very helpful for my learning.
 	  <br>
-	  (Add a section for reflection at the end of work term)
+	  <br>
+	  My goals for the last 4 months were
+	  <br>
+	  1. Improve communication with team during standup meetings
+	  <br>
+	  2. Continue to improve coding abilities
+	  <br>
+	  3. Take charge more during tasks
+	  <br>
+	  <br>
+	  After the first 4 months while my coding abilities and my communication was improving, I realized that I still needed to work on leadership and being more proactive with my work. I attempted this during
+	  soak testing by working on and seting up automated scripts while also trying to help set up a test plan. I continued to improve my coding abilities by reading tech articles and learning new languages/technologies
+	  during down time.
+	  <br>
+	  <br>
+	  Reflecting on my goals and everything I've learned while working at PerkinElmer, I believe I was extremly successful in improving my communication and teamwork skills, as well as improving my coding skills.
+	  I learned how to write code using the selenium framework which was a very interesting challenge as I had never worked with automation before. I learned how to use sas programming, as well as using batch files
+	  to set up automated scripts for soak testing.
 	  </p>
 	</div>
 
@@ -131,7 +150,8 @@
       <div class="container">
         <ul class="list-inline mb-5">
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white mr-3" href="#">
+            <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/michaelvamvakas
+">
               <i class="icon-social-linkedin"></i>
             </a>
           </li>
@@ -141,12 +161,12 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white" href="#">
+            <a class="social-link rounded-circle text-white" href="https://github.com/mvamvakas">
               <i class="icon-social-github"></i>
             </a>
           </li>
         </ul>
-        <p class="text-muted small mb-0">Copyright &copy; Your Website 2018</p>
+        <p class="text-muted small mb-0">Copyright &copy; Michael Vamvakas 2018</p>
       </div>
     </footer>
 
