added an extra page on details for a side project

--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
             </a>
           </div>
 		  <div class="col-lg-6">
-		    <a class="portfolio-item" href="https://github.com/mvamvakas/Smash-Site">
+		    <a class="portfolio-item" href="pages/SmashSite.html">
               <span class="caption">
                 <span class="caption-content">
                   <h2>Smash Tourney Site</h2>
-                  <p class="mb-0">This site is currently under development. This site is being made to track tourney wins and assign ranks to my friend group for the new smash game.</p>
+                  <p class="mb-0">This site is a ranked ladder for Super Smash bros Ultimate written using ruby on rails.</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/SmashBall.jpg" alt="">
