adding in acknodledgments in the PerkinElmer section of my site

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h4>
               <strong>Programming</strong>
             </h4>
-            <p class="text-faded mb-0">C, C++, HTML/CSS, JavaScript, Java, Sas Programming, VBA in Excel</p>
+            <p class="text-faded mb-0">C, C++, HTML/CSS, JavaScript, Java, Ruby, Ruby on Rails, Sas Programming, VBA in Excel</p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
@@ -112,7 +112,7 @@
             <h4>
               <strong>Hobbies</strong>
             </h4>
-            <p class="text-faded mb-0">Music, Video Games, Mtg, Taekwondo</p>
+            <p class="text-faded mb-0">Music, Video Games, Magic The Gathering, Taekwondo</p>
           </div>
           <div class="col-lg-3 col-md-6">
             <span class="service-icon rounded-circle mx-auto mb-3">
