--- a/pages/perkinelmer.html
+++ b/pages/perkinelmer.html
@@ -42,18 +42,6 @@
 		  <li class="nav-item active">
 			<a class="nav-link" href="#">Coop-3</a>
 		  </li>
-		  <!--
-	  	  <li class="nav-item active">
-			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			  Dropdown link
-			</a>
-		    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-			  <a class="dropdown-item" href="#">Action</a>
-			  <a class="dropdown-item" href="#">Another action</a>
-			  <a class="dropdown-item" href="#">Something else here</a>
-			</div>
-		  </li>
-		  -->
 		</ul>
 	  </div>
 	</nav>
@@ -90,7 +78,7 @@
 	  <br>
 	  Many of the things I did at PerkinElmer Include:
 	  <br>
-	  - Writing an automated test harness in Java using the <a href="https://www.seleniumhq.org/">Selenium framework</a>, as well as <a href="https://cucumber.io/">Cucumber</a>, <a href="https://maven.apache.org/">Maven</a>, and <a href="https://www.perkinelmer.com/product/signals-medical-review-smr">JUnit</a>.
+	  - Writing an automated test harness in Java using the <a href="https://www.seleniumhq.org/">Selenium framework</a>, as well as <a href="https://cucumber.io/">Cucumber</a>, <a href="https://maven.apache.org/">Maven</a>, and <a href="https://junit.org/junit5/">JUnit</a>.
 	  <br>
 	  - Running automated test cases in parallel.
 	  <br>
@@ -102,6 +90,10 @@
 	  - <a href="https://en.wikipedia.org/wiki/Stability_testing">Stability testing</a>, testing all the parameters for specific functionalities within the system, testing concurency within the system.
 	  <br>
 	  - <a href="https://en.wikipedia.org/wiki/Regression_testing">Regression testing</a>, running through hundreds of test cases after deployments in both DEV and QA environments.
+	  <br>
+	  - <a href="https://www.tibco.com/products/tibco-spotfire">Tibco Spotfire</a>, Data visualizations
+	  <br>
+	  - Batch scripting
 	  </p>
 	  <br>
 	  <br>
@@ -143,6 +135,20 @@
 	  I learned how to write code using the selenium framework which was a very interesting challenge as I had never worked with automation before. I learned how to use sas programming, as well as using batch files
 	  to set up automated scripts for soak testing.
 	  </p>
+	
+	  <h2 class="work-term-report-head"> Acknowledgments </h2>
+      <p style="font-size: 20px">
+      I would like to thank everyone I worked with, both for being great teamates and for everything I learned from them during my 8 months. had Millen, Mark Roy, Harold Miller-Koren, Sarah Shepherd (a University of Guelph alumni), 
+	  Waliur Rahman, Sharath Sundar, Neha Goyal, Stephen Menyheart, Valerie Nespolo, Jennifer Gatti. As for my fellow co-op students thank you to <a href="https://jacobyoung97.github.io/"> Jacob Young </a>, 
+	  <a href="https://kanzash.github.io/"> Kanza Shams </a>, and Daniel Cheslo. I want to do an extra thank you to Sara Shepherd for answering all my QA related questions, as well as to Mark Roy for helping me achieve my work
+	  term goals as well as helping me improve upon my weaknesses.
+	  <br>
+	  <br>
+	  Special thank you to the Guelph Co-op and Career Services, as well as my advisors Laura Gatto and Kate McRoberts.
+	  <br>
+	  <br>
+	  Finally thank you to Greg Klotz for reading through my work term report
+      </p>	
 	</div>
 
     <!-- Footer -->
