--- a/pages/perkinelmer.html
+++ b/pages/perkinelmer.html
@@ -99,7 +99,7 @@
 	  <br>
 	  <h2 class="work-term-report-head"> Goals </h2>
 	  <p style="font-size: 20px">
-	  My main goals while working for PerkinElmer was to increase my abilities as a programmer, as well as grow within a proffesional environment. I wanted to work on my communication skills as well as be more
+	  My main goals while working for PerkinElmer was to increase my abilities as a programmer, as well as grow within a profesional environment. I wanted to work on my communication skills as well as be more
 	  comfortable talking in front of my team.
 	  <br>
 	  <br>
