Added innovasium section to website

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </h4>
             <p class="text-faded mb-0">(Need to fill)</p>
           </div>
-        </div> 
+        </div>
 		<br><br>
 		<a class="btn btn-dark btn-xl js-scroll-trigger" href="#portfolio">Projects</a>
       </div>
@@ -205,11 +205,13 @@
     </section>
 
     <!-- Co-op Logos that link to html pages -->
-    <section id="PerkinElmer">
-	<br><br>
+    <section id="PerkinElmer" class="horizontalFlex">
 	  <a href="pages/perkinelmer.html">
-        <img class="center" src="img/PKILogo.png" alt="">
+      <img class="center" src="img/PKILogo.png" alt="">
 	  </a>
+    <a href="pages/innovasium.html">
+      <img class="center" src="img/InnovasiumLogo.png" alt="">
+   </a>
     </section>
 
     <!-- Footer -->
