--- a/pages/innovasium.html
+++ b/pages/innovasium.html
@@ -109,7 +109,7 @@
 	  <h2 class="work-term-report-head"> Acknowledgments </h2>
       <p style="font-size: 20px">
       I would like to thank everyone I worked with, both for being great teamates and for mentoring me over my term. Daniel Hageman, Rob Smith, Martin Andres, Cory Adrian, Zach Finn, Ben Kennedy, Julia Sotnyk, Mina Makar, Chris Haddock. As for my fellow interns thank you
-      to <a href="https://andrewlazenka.com"> Andrew Lazenka </a>, <a href="https://alegemaate.github.io"> Allan Legemaate </a>, and Jacqueline Smith. I want to do an extra thank you to Andrew Lazenka for all the React help and a special shout out to Bella, the office dog
+      to <a href="https://andrewlazenka.com"> Andrew Lazenka </a>, <a href="https://alegemaate.github.io"> Allan Legemaate </a>, and Jacqueline Smith. I want to do an extra thank you to Andrew Lazenka for all the React help and a special shout out to Bella, the office dog.
 	  <br>
 	  <br>
 	  Special thank you to the Guelph Co-op and Career Services, as well as my advisors Laura Gatto and Kate McRoberts.
